...
    Column(modifier = modifier) {
        OutlinedTextField(
            value = state.textFieldValue,
            onValueChange = { state.updateTextFieldValue(it) },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("FormulaTextField")
                .focusRequester(focusRequester)
                .onPreviewKeyEvent { keyEvent ->
                    if (keyEvent.key == Key.Enter && keyEvent.type == KeyEventType.KeyUp) {
                        state.triggerEvaluation()
                        true
                    } else false
...
private fun FormulaLeadingIcon(
    isFormulaMode: Boolean,
    onClick: () -> Unit
) {
    IconButton(
        onClick = onClick,
        modifier = Modifier.testTag("FormulaButton")
    ) {
        Text(
            text = "=",
            style = MaterialTheme.typography.titleLarge,
            fontWeight = FontWeight.Bold,
            color = if (isFormulaMode) MaterialTheme.colorScheme.primary 
...
